# mcp-postgres

./: .dockerignore  Cargo.toml  Dockerfile  README.md  TechnicalDetails.md  databases.yaml  docker-compose.yml  setup.ps1
src/: credentials.rs  ctl.rs  db.rs  main.rs  mcp_protocol.rs  pool.rs  registry.rs  tools.rs  tools_registry.rs
src/discovery/: cnpg.rs  generic.rs  k8s_client.rs  local_docker.rs  local_host.rs  mod.rs  zalando.rs
