[package]
name = "mcp-dba-postgres"
version = "1.0.0"
edition = "2021"
description = "Model Context Protocol Server for PostgreSQL DBA Tools"

[dependencies]
# Async runtime and TCP networking
tokio = { version = "1.36", features = ["full"] }

# PostgreSQL driver
tokio-postgres = "0.7.10"

# JSON Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Anyhow for easy error handling
anyhow = "1.0"
dotenvy = "0.15"

# Futures helper
futures = "0.3"
