[package]
name = "mcp-dba-postgres"
version = "1.1.0"
edition = "2021"
description = "Model Context Protocol Server for PostgreSQL DBA Tools"

[dependencies]
# Async runtime and TCP networking
tokio = { version = "1.36", features = ["full"] }

# PostgreSQL driver
tokio-postgres = "0.7.10"

# JSON / YAML serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling and env loading
anyhow = "1.0"
dotenvy = "0.15"

# Async helpers
futures = "0.3"
async-trait = "0.1"

# Kubernetes client + CRDs
kube = { version = "0.92", default-features = false, features = ["client", "rustls-tls", "derive", "runtime"] }
k8s-openapi = { version = "0.22", features = ["v1_29"] }
schemars = "0.8"

# Docker client (named pipe on Windows, socket on Linux/macOS)
bollard = "0.16"

# Misc
chrono = { version = "0.4", features = ["serde"] }
